[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "gymbizhawk"
dynamic = ["version"]
description = "This is a collaboration library between BizHawk, a multi-system emulator, and Gym, a reinforcement learning framework."
readme = "README-pypi.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [ { name = "poco", email = "pocopococpp198@gmail.com" } ]
requires-python = ">=3.9"
dependencies = [
    "gymnasium",
    "opencv-python",
    "pygame",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/pocokhc/GymBizHawk"

[tool.setuptools.packages.find]
include = ["gymbizhawk*"]

[tool.setuptools.dynamic]
version = { attr = "gymbizhawk.version.__version__" }

[tool.ruff]
line-length = 119

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E","F","W"]
ignore = [
    "E203",  # whitespace before ':'
]
unfixable = [
    "F401",  # unused import
]
